# Portfolio-Roadmap-Physics-Numerical-Methods.

./: CMakeLists.txt  Makefile  README.md  create_examples.sh  create_project.sh
Classical Mechanics — ODE Integrators/: harmonic_oscillator_rk4.csv  main  main.cpp  nbody_velocity_verlet.csv  pendulum_adaptive_rk45.csv  plots.ipynb
DHO/: dho  dho.cpp  dho_output.csv
DHO/.ipynb_checkpoints/: plot_dho-checkpoint.py
ODE_and_PDE_solver/: gui_app.py  latex_solver.py
ODE_and_PDE_solver/.ipynb_checkpoints/: auto_solver-checkpoint.py
Physics_Numerical_Methods/: .gitignore  README.md  visualize_pendulum.py
Physics_Numerical_Methods/docs/: theory.md
Physics_Numerical_Methods/examples/: harmonic_oscillator.cpp  pendulum_simulation.cpp  planetary_motion.cpp
Physics_Numerical_Methods/src/: ode_solvers.cpp
Physics_Numerical_Methods/tests/: unit_tests.cpp
SHO/: plot_sho.py  sho  sho.cpp  sho_output.csv
Schrodinger_Spherical_3D/: Schr_spher_3D  Schr_spher_3D.cpp
Schrodinger_Spherical_3D/.ipynb_checkpoints/: plot_schrodinger-checkpoint.py
Wave_spherical_1D/: Wave_eq_spher_1D  Wave_eq_spher_1D.cpp  plot_wave_1D.py  wave_spherical.csv
Wave_spherical_1D/.ipynb_checkpoints/: plot_wave_1D-checkpoint.py
Wave_spherical_3D/: Wave_eq_spher_3D  Wave_eq_spher_3D.cpp  plot_wave_3d.py  wave3d_snapshot.csv
Wave_spherical_3D/.ipynb_checkpoints/: plot_wave_3d-checkpoint.py
examples/: heat_equation.cpp
include/: integration.h  numerical_analysis.h  ode_solvers.h  physics_simulations.h
src/: integration.cpp  numerical_analysis.cpp  physics_simulations.cpp
(+15 files in other folders)
